Name:                   issue-add
Version:                0.0.1
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Action.Label
                        Action.Internal.Issue
                        Action.Internal.Label                        
  Build-Depends:        attoparsec
                      , base >= 4 && < 5
                      , bytestring
                      , getopt-generics >= 0.6.3
                      , github == 0.13.1.7569
                      , here
                      , lens >= 4.9.1
                      , orgmode-parse
                      , shakespeare
                      , shakespeare-templates
                      , text
                      , trifecta
                      , unordered-containers >= 0.2.5.1
Executable add-labels-with-auth
  Build-Depends:    base
                  , bytestring
                  , getopt-generics 
                  , github
                  , lens
                  , shakespeare
                  , shakespeare-templates
                  , trifecta
                  , unordered-containers 
  Main-Is:        LabelMain.hs
  Hs-Source-Dirs: src

Executable add-issues-with-auth
  Build-Depends:    attoparsec
                  , base
                  , bytestring
                  , getopt-generics 
                  , github
                  , orgmode-parse
                  , here
                  , text
                  , lens
                  , trifecta
                  , unordered-containers 
  Main-Is:        IssueMain.hs
  Hs-Source-Dirs: src

                      
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        QuickCheck
                      , attoparsec
                      , base
                      , bytestring
                      , github
                      , here
                      , hspec
                      , lens >= 4.9.1
                      , orgmode-parse
                      , template-haskell
                      , text
                      , unordered-containers >= 0.2.5.1

Source-Repository head
  Type:                 git
--  Location:             
